Changelog
=========

2.0b1 - Unreleased
------------------


2.0a1 - 2009-11-14
------------------

- Made sure to use the correct ViewPageTemplateFile from Products.Five.
  [hannosch]

- Updated to use new locations for IAdding and IObjectEvent.
  [hannosch]

- Updated checkboxwidget hacks to work with zope.app.form 3.8.0.
  [hannosch]

- Use getSite from zope.site instead of zope.app.component.
  [hannosch]

- Made sure tests don't rely on kupu.
  [hannosch]

- Updated import of ITerms to zope.browser.interfaces.
  [hannosch]

- Made kss support truly optional and advertise it via an extra.
  [hannosch]

- Use our own PloneMessageFactory. We don't depend on CMFPlone anymore.
  [hannosch]

- Specified package dependencies.
  [hannosch]

- Corrected the NamedTemplateAdapter to work with the modified
  ViewPageTemplateFile in Zope 2.12.
  [davisagli]

1.1.9 - Unreleased
------------------

- Fixed some duplicated msgids with different defaults.
  There is no new strings to translate.
  See http://dev.plone.org/plone/ticket/9633
  [vincentfretin]

1.1.8 - 2009-10-09
------------------

- Made default truncation size of 20 results on the uberselectionwidget
  configurable by a simple variable called `limit_results` on the widget.
  [hannosch]

- Fixed return value of multi selection widget _value method. The template 
  tries to get len() of the value, but fails if the value is None. This allows
  to use multi selection widget in the portlets, for example.
  [naro]

1.1.7 - 2008-03-07
------------------

- Fixed inline save of 'title' field raises 'Invalid request' error.
  This closes http://dev.plone.org/plone/ticket/8189.
  [deo]

1.1.6 - 2008-11-21
------------------

- Made a test less dependent on the exact HTML output, so it works across
  Zope versions with slightly different newline ending semantics.
  [hannosch]

- Only include KSS subpackage if kss.core is available.
  [hannosch]

- Fixed KSS payload tests to omit a trailing newline.
  [hannosch]
